Add classes ids to fruit.html

--- a/fruits.html
+++ b/fruits.html
@@ -9,17 +9,17 @@
 
   <main>
     <hgroup>
-      <h1>Fruits</h1>
+      <h1 id="page-title">Fruits</h1>
       <p>Fruits are delicious</p>
     </hgroup>
 
     <section>
       <h1>My favorite fruits</h1>
       <ul>
-        <li>Bananas</li>
-        <li>Oranges</li>
-        <li>Mango</li>
-        <li>Papaya</li>
+        <li class="fruit">Bananas</li>
+        <li class="fruit">Oranges</li>
+        <li class="fruit">Mango</li>
+        <li class="fruit">Papaya</li>
       </ul>
     </section>
 
